@@ -1,4 +1,12 @@
 plugin.video.bgtelevizor
 =====================
 
-XBMC plugin for BGTelevizor.net, Bulgarian TV internet provider
+This is a modified version of the neterra plugin for XMBC created by mr.olix@gmail.com, allowing for playback of TV streams on BGTelevizor.net. 
+The plugin uses methods from module script.module.beautifulsoup. This should be installed automatically when you install from zip file. 
+If not install the MyVideo.de plugin from Tristan Fischer which is available in the official XBMC addon repositiory. 
+
+This plugin has been tested on XBMC running on Windows 8, as well as on the openELEC distribution for Raspberry Pi.
+
+Note: In order for the plugin to run properly on the Raspberry Pi, a VC-1 decode key must be purchased from the pi store. (~$2)
+The key is required to unlock hardware decoding of Windows Media Video on the device, otherwise only the audio stream will play. 
+
