@@ -1,5 +1,5 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.neterratv" name="Neterra.TV" version="0.0.6" provider-name="mr.olix@gmail.com">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<addon id="plugin.video.bgtelevizor" name="BGTelevizor.net" version="1.0" provider-name="pavelpep@live.com">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
     <import addon="script.module.xbmcswift" version="0.2.0"/>
@@ -10,17 +10,12 @@
   </extension>
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
-    <language>de</language>
-    <summary lang="en">Video plugin for Neterra.TV http://www.neterra.tv/</summary>
-    <summary lang="de">Video plugin für Neterra.TV http://www.neterra.tv/</summary>
+    <language>en</language>
+    <summary lang="en">Video plugin for BGTelevizor.net</summary>   
     <description lang="en">
-    This plugin provides access to tv videos streams from Neterra.TV.
-    Note: Neterra.TV account is required.
+    This plugin provides access to the TV streams on BGTelevizor.net 
+    (account is required) Note: You must enter your username and password in the plug-in settings, before using the plugin for the first time.
     </description>   
-    <description lang="de">
-    Dieses plugin bietet Zugriff auf alle Videos Streams from Neterra.TV.
-    Note: Neterra.TV Benutzer ist erforderlich.
-    </description>   
-    <disclaimer lang="en">You have to sign up and pay to access Neterra.TV TV streams</disclaimer>
+    <disclaimer lang="en">You have to sign up and pay to access BGTelevizor.net TV streams</disclaimer>
   </extension>
 </addon>
